--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
 	font-family: 'fira sans';
-	src: url('./src/fonts/firasans-regular-webfont.woff2') format('woff2'),
-		url('./src/fonts/firasans-regular-webfont.woff') format('woff');
+	src: url('../src/fonts/firasans-regular-webfont.woff2') format('woff2'),
+		url('../src/fonts/firasans-regular-webfont.woff') format('woff');
 	font-weight: normal;
 	font-style: normal;
 	font-display: swap;
@@ -9,8 +9,8 @@
 
 @font-face {
 	font-family: 'fira_sans_lightitalic';
-	src: url('./src/fonts/firasans-lightitalic-webfont.woff2') format('woff2'),
-		url('./src/fonts/firasans-lightitalic-webfont.woff') format('woff');
+	src: url('../src/fonts/firasans-lightitalic-webfont.woff2') format('woff2'),
+		url('../src/fonts/firasans-lightitalic-webfont.woff') format('woff');
 	font-weight: normal;
 	font-style: normal;
 	font-display: swap;
@@ -18,8 +18,8 @@
 
 @font-face {
 	font-family: 'fira_sans_semiboldregular';
-	src: url('./src/fonts/firasans-semibold-webfont.woff2') format('woff2'),
-		url('./src/fonts/firasans-semibold-webfont.woff') format('woff');
+	src: url('../src/fonts/firasans-semibold-webfont.woff2') format('woff2'),
+		url('../src/fonts/firasans-semibold-webfont.woff') format('woff');
 	font-weight: 700;
 	font-style: normal;
 	font-display: swap;
