--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -1,1 +1,7 @@
 $bg-white: #f6f6f6;
+$black-text: #333333;
+$main-pink: #d768b2;
+$yellow: #FAD075;
+$blue: #65ADF0;
+$CTA-green: #9ADE7A;
+$orange: #FACA8E;
