--- a/src/sass/_large.scss
+++ b/src/sass/_large.scss
@@ -1,3 +1,55 @@
 @media (min-width: 992px) {
-    
+	.nav {
+		box-shadow: 0 1px 5px -2px $black-text;
+
+		.wrapper {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			width: 100%;
+		}
+
+		&__desktop-nav {
+			display: flex;
+			list-style: none;
+            padding-right: 25px;
+		}
+
+		&__nav-item {
+			position: relative;
+			display: inline-block;
+			text-transform: uppercase;
+			font-size: 16px;
+			padding: 14px 12px;
+            margin: 0 6px;
+			text-decoration: none;
+			color: $black-text;
+			border-radius: 2px;
+			overflow: hidden;
+            transition: all .5s;
+
+			&:hover {
+				color: $main-pink;
+			}
+
+			&::before {
+				content: '';
+				position: absolute;
+				width: 100%;
+				height: 3px;
+				background-color: $main-pink;
+				bottom: 0px;
+				left: -120px;
+                transition: all .5s;
+			}
+
+            &:hover::before {
+                left: 0px;
+            }
+		}
+
+		&__burger-btn {
+			display: none;
+		}
+	}
 }
