--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,6 +13,7 @@
 body {
 	font-family: 'fira sans';
 	background-color: $bg-white;
+	color: $black-text;
 	font-size: 16px;
 }
 
@@ -23,8 +24,7 @@ body {
 }
 
 .nav {
-box-shadow: 0 3px 6px -3px gray;
-
+	box-shadow: 0 1px 5px -2px $black-text;
 
 	.wrapper {
 		display: flex;
@@ -33,32 +33,42 @@ box-shadow: 0 3px 6px -3px gray;
 		width: 100%;
 	}
 
-	&__menu-container{
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-		
-	}
-	
 	&__desktop-nav {
-		list-style: none;
-	}
-	
-	&__nav-item {
-		
-		text-transform: uppercase;
-		font-size: 15px;
-		padding: 15px 25px;
-		display: inline-block;
-	}
-
-	&__burger-btn {
-		margin-left: 50px;
-		height: 30px;
+		display: none;
 	}
 
 	&__logo {
-		margin: 8px;
+		padding-left: 25px;
+		margin: 4px;
+	}
+
+	&__burger-btn {
+		margin-right: 25px;
+		height: 40px;
+		width: 40px;
+	}
+
+	&__media-bar {
+		background-color: #dbdbdb;
+		width: 100%;
+		height: 30px;	
+	}
+}
+
+.header {
+	position: relative;
+	background-image: url(../../dist/img/hero-img.jpg);
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+	height: 550px;
+
+	&::before {
+		position: absolute;
+		content: '';
+		width: 100%;
+		height: 100%;
+		background-color: #a4f77d29;
 	}
 }
 
