--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -8,7 +8,7 @@
 }
 
 @font-face {
-	font-family: 'fira_sans_lightitalic';
+	font-family: 'fira sans-italic';
 	src: url('../../src/fonts/firasans-lightitalic-webfont.woff2') format('woff2'),
 		url('../../src/fonts/firasans-lightitalic-webfont.woff') format('woff');
 	font-weight: normal;
@@ -17,7 +17,7 @@
 }
 
 @font-face {
-	font-family: 'fira_sans_semiboldregular';
+	font-family: 'fira sans-bold';
 	src: url('../../src/fonts/firasans-semibold-webfont.woff2') format('woff2'),
 		url('../../src/fonts/firasans-semibold-webfont.woff') format('woff');
 	font-weight: 700;
