--- a/src/sass/_large.scss
+++ b/src/sass/_large.scss
@@ -1,7 +1,5 @@
 @media (min-width: 992px) {
 	.nav {
-		box-shadow: 0 1px 5px -2px $black-text;
-
 		.wrapper {
 			display: flex;
 			justify-content: space-between;
@@ -10,6 +8,7 @@
 		}
 
 		&__desktop-nav {
+            position: relative;
 			display: flex;
 			list-style: none;
             padding-right: 25px;
@@ -20,13 +19,13 @@
 			display: inline-block;
 			text-transform: uppercase;
 			font-size: 16px;
-			padding: 14px 12px;
+			padding: 16px 18px;
             margin: 0 6px;
 			text-decoration: none;
 			color: $black-text;
 			border-radius: 2px;
 			overflow: hidden;
-            transition: all .5s;
+            transition: all .4s;
 
 			&:hover {
 				color: $main-pink;
@@ -35,12 +34,13 @@
 			&::before {
 				content: '';
 				position: absolute;
-				width: 100%;
-				height: 3px;
+				width: 60%;
+				height: 4px;
 				background-color: $main-pink;
 				bottom: 0px;
-				left: -120px;
-                transition: all .5s;
+				left: -100%;
+                transition: all .4s;
+                border-radius: 3px;
 			}
 
             &:hover::before {
@@ -51,5 +51,102 @@
 		&__burger-btn {
 			display: none;
 		}
+
+        &__media-bar {
+            display: flex;
+            box-shadow: 0 1px 5px -3px $black-text;
+            width: 100%;
+            height: 26px;
+            font-size: 14px;
+            color: $main-pink;
+        }
+
+        &__media-bar-conitainer {
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+            margin: 0 auto;
+            max-width: 1360px;
+            width: 100%;
+        }
+
+        &__clock-icon {
+            padding: 0 10px;
+            margin-left: 25px;
+        }
+
+        &__phone-icon {
+            padding: 0 10px;
+            margin-left: 25px;
+        }
+
+        &__media-bar-text {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        &__link-phone {
+            text-decoration: none;
+            color: $main-pink;
+        }
+
+        &__media-bar-media-icon {
+            padding: 0 8px;
+        }
+
+        &__media-text-space{ 
+            padding-right: 100px;
+        }
+
+        &__dropdown-menu-offer {
+            position: absolute;
+            box-shadow: 0 2px 8px -2px $black-text;
+            border-radius: 6px;
+            left: 103px;
+            padding: 20px;
+            background-color: $bg-white;
+            transition: all .4s;
+        }
+
+        &__dropdown-menu-ul{
+            list-style: none;
+        }
+
+        &__dropdown-menu-li{
+            padding: 20px 0;
+            text-transform: uppercase;
+            position: relative;
+			text-decoration: none;
+			color: $black-text;
+			border-radius: 2px;
+			overflow: hidden;
+            transition: all .4s;
+
+            &:hover {
+				color: $main-pink;
+			}
+
+            &::before {
+				content: '';
+				position: absolute;
+				width: 35%;
+				height: 4px;
+				background-color: $main-pink;
+				bottom: 0px;
+				left: -100%;
+                transition: all .4s;
+                border-radius: 3px;
+			}
+
+            &:hover::before {
+                left: 0px;
+            }
+        }
+
+        &__arrow-icon {
+            padding-left: 8px;
+            transition: all .4s;
+        }
 	}
 }
