--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -23,8 +23,30 @@ body {
 	width: 100%;
 }
 
+.nav-bottom-shadow {
+	box-shadow: 0 2px 5px -2px $black-text;
+}
+
+.disactive {
+	display: none;
+}
+
+.active {
+	display: flex;
+}
+
+.rotate {
+	transform: rotateX(180deg);
+	transition: all .4s;
+}
+
 .nav {
-	box-shadow: 0 1px 5px -2px $black-text;
+	position: fixed;
+	width: 100%;
+	height: 124px;
+	top: 0px;
+	z-index: 100;
+	background-color: $bg-white;
 
 	.wrapper {
 		display: flex;
@@ -49,19 +71,17 @@ body {
 	}
 
 	&__media-bar {
-		background-color: #dbdbdb;
-		width: 100%;
-		height: 30px;	
+		display: none;
 	}
 }
 
 .header {
 	position: relative;
 	background-image: url(../../dist/img/hero-img.jpg);
-	background-position: center;
+	background-position: 50% 70%;
 	background-size: cover;
 	background-repeat: no-repeat;
-	height: 550px;
+	height: 600px;
 
 	&::before {
 		position: absolute;
@@ -70,6 +90,10 @@ body {
 		height: 100%;
 		background-color: #a4f77d29;
 	}
+}
+
+.main {
+	height: 600px;
 }
 
 @import './small';
