--- a/src/sass/_large.scss
+++ b/src/sass/_large.scss
@@ -19,7 +19,7 @@
 			display: inline-block;
 			text-transform: uppercase;
 			font-size: 16px;
-			padding: 16px 18px;
+			padding: 16px 13px;
             margin: 0 6px;
 			text-decoration: none;
 			color: $black-text;
@@ -63,40 +63,72 @@
 
         &__media-bar-conitainer {
             display: flex;
-            justify-content: flex-end;
+            justify-content: space-between;
             align-items: center;
             margin: 0 auto;
             max-width: 1360px;
             width: 100%;
         }
 
-        &__clock-icon {
-            padding: 0 10px;
-            margin-left: 25px;
+        &__email-icon {
+            padding-right: 8px;
         }
 
         &__phone-icon {
-            padding: 0 10px;
-            margin-left: 25px;
+            padding-right: 8px;
         }
 
         &__media-bar-text {
             display: flex;
             justify-content: center;
             align-items: center;
+            padding-right: 25px;
+        }
+
+        &__center-social-media-icon {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+
+
+        &__socialmedia-square {
+            min-width: 16%;
+            min-height: 16px;
         }
 
         &__link-phone {
             text-decoration: none;
             color: $main-pink;
+            transition: .2s;
+            margin-right: 25px;
+
+            &:hover {
+                color: $black-text;
+            }
         }
 
-        &__media-bar-media-icon {
-            padding: 0 8px;
+        &__link-email {
+            text-decoration: none;
+            color: $main-pink;
+            transition: .2s;
+
+            &:hover {
+                color: $black-text;
+            }
         }
 
-        &__media-text-space{ 
-            padding-right: 100px;
+        &__center-social-media-icon-space {
+            margin-left: 480px;
+        }
+
+        &__social-meda-container {
+            position: relative;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            min-width: 45px;
         }
 
         &__dropdown-menu-offer {
@@ -114,7 +146,7 @@
         }
 
         &__dropdown-menu-li{
-            padding: 20px 0;
+            padding: 20px 15px;
             text-transform: uppercase;
             position: relative;
 			text-decoration: none;
@@ -146,7 +178,15 @@
 
         &__arrow-icon {
             padding-left: 8px;
-            transition: all .4s;
+            transition: all .2s;
+        }
+
+        &__dropdown-menu-offer-items{
+            text-decoration: none;
+        }
+
+        &__external-link-icon {
+            padding-left: 15px;
         }
 	}
 }
