--- a/src/sass/_large.scss
+++ b/src/sass/_large.scss
@@ -188,5 +188,9 @@
         &__external-link-icon {
             padding-left: 15px;
         }
+
+        &__mobile-menu-container {
+            // display: none;
+        }
 	}
 }
