--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,11 +8,10 @@
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
-	// overflow: hidden;
 }
 
 body {
-	font-family: 'fira sans';
+	font-family: 'fira sans', sans-serif;
 	background-color: $bg-white;
 	color: $black-text;
 	font-size: 16px;
@@ -124,7 +123,7 @@ body {
 		border-radius: 2px;
 		top: 50%;
 		left: 50%;
-		transition: all .7s;
+		transition: all 0.5s;
 	}
 
 	&__burger-btn-span1 {
@@ -142,12 +141,12 @@ body {
 	.burger-span1 {
 		transform: translate(-50%, -50%) rotate(45deg);
 	}
-	
+
 	.burger-span2 {
 		transform: translate(-260%, -50%);
-		opacity: .4;
+		opacity: 0.4;
 	}
-	
+
 	.burger-span3 {
 		transform: translate(-50%, -50%) rotate(-45deg);
 	}
@@ -164,30 +163,27 @@ body {
 		background-color: $bg-white;
 		padding-top: 45px;
 		z-index: -1;
-		transition: all .4s;
-	}
-
-	.mobile-menu-active {
-		left: 0%;
+		transition: all 0.4s;
 	}
 
 	&__mobile-menu-items {
 		display: flex;
 		flex-direction: column;
-		justify-content: center;
 	}
-	
+
 	&__mobile-menu-items-content {
 		position: relative;
-		display: inline-block;
+		display: flex;
+		align-items: center;
 		text-decoration: none;
 		padding: 20px 30px;
-		margin: 6px;
+		margin: 4px;
 		font-size: 18px;
 		text-transform: uppercase;
-		transition: .3s;
+		transition: 0.3s;
 		overflow: hidden;
 		color: $black-text;
+		outline: none;
 
 		&:hover {
 			color: $main-pink;
@@ -201,17 +197,111 @@ body {
 			background-color: $main-pink;
 			bottom: 0px;
 			left: -65%;
-			transition: all .2s;
+			transition: all 0.2s;
 			border-radius: 3px;
 		}
 
 		&:hover::before {
 			left: 0px;
 		}
+	}
 
-		&__mobile-menu-link {
-			text-decoration: none;
+	&__mobile-menu-link {
+		text-decoration: none;
+		outline: none;  
+	}
+
+	&__arrow-icon {
+		padding-left: 8px;
+		transition: all .2s;
+	}
+
+	&__mobile-menu-container-offer-submenu {
+		position: absolute;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		width: 100%;
+		height: 100vh;
+		top: 0px;
+		left: 101%;
+		background-color: $bg-white;
+		padding-top: 45px;
+		z-index: -1;
+		transition: all 0.4s;
+	}
+
+	&__mobile-menu-items-content-submenu {
+		position: relative;
+		display: flex;
+		align-items: center;
+		text-decoration: none;
+		padding: 20px 30px;
+		margin: 4px;
+		font-size: 18px;
+		text-transform: uppercase;
+		transition: 0.3s;
+		overflow: hidden;
+		color: $black-text;
+		outline: none;
+
+		&:hover {
+			color: $main-pink;
 		}
+
+		&::before {
+			content: '';
+			position: absolute;
+			width: 40%;
+			height: 4px;
+			background-color: $main-pink;
+			bottom: 0px;
+			left: -65%;
+			transition: all 0.2s;
+			border-radius: 3px;
+		}
+
+		&:hover::before {
+			left: 0px;
+		}
+	}
+	
+	&__mobile-menu-items-back-btn{
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		// margin-top: 75px;
+		border: none;
+		padding: 20px 40px;
+		font-size: 24px;
+		text-transform: uppercase;
+		font-family: fira sans-bold;
+		background-color: $bg-white;
+		cursor: pointer;
+
+		&:hover {
+			color: $main-pink;
+		}
+	}
+
+	&__back-icon {
+		margin-right: 15px;
+
+	}
+
+	&__mobile-menu-container-offer-submenu {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-around;
+	}
+
+	&__external-link-icon {
+		padding-left: 15px;
+	}
+
+	.mobile-menu-active {
+		left: 0%;
 	}
 }
 
@@ -230,7 +320,7 @@ body {
 		height: 100%;
 		background-color: #a4f77d30;
 	}
-	
+
 	&::after {
 		position: absolute;
 		content: '';
