--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -3,5 +3,6 @@ $black-text: #333333;
 $main-pink: #d768b2;
 $yellow: #FAD075;
 $blue: #65ADF0;
-$CTA-green: #9ADE7A;
+$CTA-green: #00e10b;
 $orange: #FACA8E;
+$h1-heading: #1b1b1b;
