--- a/src/sass/_large.scss
+++ b/src/sass/_large.scss
@@ -91,8 +91,6 @@
             align-items: center;
         }
 
-
-
         &__socialmedia-square {
             min-width: 16%;
             min-height: 16px;
@@ -181,6 +179,10 @@
         }
 
         &__mobile-menu-container {
+            display: none;
+        }
+
+        &__mobile-menu-container-offer-submenu {
             display: none;
         }
 	}
