--- a/src/sass/_large.scss
+++ b/src/sass/_large.scss
@@ -61,6 +61,14 @@
             color: $main-pink;
         }
 
+        .remove-media-bar {
+            animation: mediaBarAnim 1s ease forwards;
+        }
+
+        .remove-media-bar-rev {
+            animation: mediaBarAnimRev 1s ease forwards;
+        }
+
         &__media-bar-conitainer {
             display: flex;
             justify-content: space-between;
