--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -1,3 +1,9 @@
+@mixin flex-center {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 @keyframes arrowIconMenuOffertItem {
 	from {
 		transform: rotateX(0deg);
@@ -15,32 +21,6 @@
 		transform: rotateX(0deg);
 	}
 }
-
-// @keyframes resizeDesktopLogo {
-// 	from {
-// 		width: 228px;
-// 		height: 62px;
-// 	}
-// 	to {
-// 		width: 165px;
-// 		height: 45px;
-// 		background-image: url('../../dist/img/Medycyna-chinska-logo-small.png');
-// 	}
-// }
-
-// @keyframes resizeDesktopLogoRev {
-// 	from {
-// 		width: 165px;
-// 		height: 45px;
-// 		background-image: url('../../dist/img/Medycyna-chinska-logo-small.png');
-// 	}
-// 	to {
-// 		width: 228px;
-// 		height: 62px;
-// 		background-image: url('../../dist/img/Medycyna-chinska-logo-mobile.png');
-// 	}
-// }
-
 
 @keyframes resizeDesktopLogoo {
 	from {
@@ -62,5 +42,29 @@
 	to {
 		width: 228px;
 		height: 62px;
+	}
+}
+
+@keyframes mediaBarAnim {
+	from {
+		height: 26px;
+	}
+	to {
+		height: 0px;
+		opacity: 0;
+		display: none;
+	}
+}
+
+@keyframes mediaBarAnimRev {
+	from {
+		height: 0px;
+		opacity: 0;
+		display: none;
+	}
+	to {
+		height: 26px;
+		opacity: 1;
+		display: flex;
 	}
 }
