--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -11,7 +11,7 @@
 	font-family: 'fira sans-italic';
 	src: url('../../src/fonts/firasans-lightitalic-webfont.woff2') format('woff2'),
 		url('../../src/fonts/firasans-lightitalic-webfont.woff') format('woff');
-	font-weight: normal;
+	font-weight: italic;
 	font-style: normal;
 	font-display: swap;
 }
