--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -79,6 +79,9 @@ body {
 	margin: 4px 4px 4px 10px;
 	width: 228px;
 	height: 62px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	}
 
 	&__burger-btn {
@@ -298,6 +301,10 @@ body {
 	.mobile-menu-active {
 		left: 0%;
 	}
+
+	&__media-bar {
+		display: none;
+	}
 }
 
 .header {
@@ -317,17 +324,16 @@ body {
 		content: '';
 		width: 100%;
 		height: 100%;
-		background-color: #80808044;
+		background-color: #80808050;
 	}
 
-	// &::after {
-	// 	position: absolute;
-	// 	content: '';
-	// 	width: 100%;
-	// 	height: 100%;
-	// 	// background-color: #5e5e5e3f;
-	// 	background-color: #f1fff95a;
-	// }
+	&::after {
+		position: absolute;
+		content: '';
+		width: 100%;
+		height: 100%;
+		background-color: #0000000f;
+	}
 
 	&__box {
 		display: flex;
@@ -335,26 +341,67 @@ body {
 		justify-content: center;
 		align-items: flex-start;
 		z-index: 1;
-		// background-color: #9f9f9f4d;
 		padding: 15px;
 		border-radius: 8px;
 	}
 
 	&__h1-head {
-		font-size: 28px;
+		font-size: 30px;
 		color: $h1-heading;
 		width: min-content;
-		letter-spacing: 3px;
+		letter-spacing: 2px;
 		text-transform: uppercase;
-		line-height: 34px;
-		font-family: fira sans-bold;
+		line-height: 32px;
+		font-family: 'fira sans-bold';
+		font-weight: 700;
 		z-index: 10;
 	}
+
 	&__paragraph {
 		padding-top: 15px;
 		font-size: 22px;
 		color: $h1-heading;
 		text-transform: uppercase;
+		font-family: 'fira sans-bold';
+		font-weight: 700;
+		letter-spacing: 1px;
+	}
+
+	&__button{
+		margin-top: 75px;
+		width: 185px;
+		height: 44px;
+		border: none;
+		background-color: $CTA-green;
+		border-radius: 3px;
+		color: $black-text;
+		cursor: pointer;
+		font-family: 'fira sans-bold';
+		font-weight: 700;
+		font-size: 14px;
+		letter-spacing: 0.5px;
+		display: flex;
+		justify-content: flex-start;
+		align-items: center;
+
+		&:hover .header__vertical-bar {
+			margin-right: 20px;
+		}
+	}
+
+	&__button-text {
+		margin-left: 24px;
+	}
+
+	&__vertical-bar {
+		margin-left: 20px;
+		width: 1px;
+		height: 100%;
+		background-color: rgb(154, 216, 146);
+		display: flex;
+		align-items: center;
+		margin-right: 15px;
+		transition: all .3s;
 	}
 }
 
