--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -3,6 +3,6 @@ $black-text: #333333;
 $main-pink: #d768b2;
 $yellow: #FAD075;
 $blue: #65ADF0;
-$CTA-green: #11d007;
+$CTA-green: #13b60b;
 $orange: #FACA8E;
-$h1-heading: #1b1b1b;
+$h1-heading: #FFFFFF;
