--- a/src/sass/_large.scss
+++ b/src/sass/_large.scss
@@ -105,10 +105,12 @@
         }
 
         &__link-phone {
+            font-weight: 700;
             text-decoration: none;
             color: $main-pink;
             transition: .3s;
             margin-right: 25px;
+            letter-spacing: 1px;
 
             &:hover {
                 color: $black-text;
@@ -119,6 +121,7 @@
             text-decoration: none;
             color: $main-pink;
             transition: .3s;
+            letter-spacing: 0.5px;
 
             &:hover {
                 color: $black-text;
@@ -194,4 +197,20 @@
             display: none;
         }
 	}
+
+    .main {
+    
+        .rings {
+    
+            &__circle-one {
+                transform: translate(190%, 0%);
+            }
+            &__circle-two {
+                transform: translate(-50%, 0%);
+            }
+            &__circle-three {
+                transform: translate(-290%, 0%);	
+            }
+        }
+    }
 }
