--- a/src/sass/_medium.scss
+++ b/src/sass/_medium.scss
@@ -8,13 +8,61 @@
             letter-spacing: 3px;
             text-transform: uppercase;
             line-height: 34px;
-            font-family: fira sans-bold;
+            font-family: 'fira sans-bold';
+            font-weight: 700;
             z-index: 10;
         }
+
         &__paragraph {
             padding-top: 20px;
             font-size: 26px;
-            color: $h1-heading;
         }
     }
+
+    .main {
+    
+        .rings {
+    
+            &__container {
+                position: absolute;
+                top: 540px;
+                left: 0;
+                width: 100%;
+                height: 160px;
+            }
+        
+            &__circle{
+                height: 160px;
+                width: 160px;
+            }
+    
+            &__circle-one {
+                transform: translate(120%, 0%);
+                background-image: url(../../dist/img/rectangle1-big.jpg);
+            }
+            &__circle-two {
+                transform: translate(-50%, 0%);
+                background-image: url(../../dist/img/rectangle2-big.jpg);
+            }
+            &__circle-three {
+                transform: translate(-220%, 0%);
+                background-image: url(../../dist/img/rectangle3-big.jpg);			
+            }
+        }
+
+        .aboutme{
+            position: relative;
+            scroll-margin-top: -45px;
+            
+            .h2-section {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, 600%);
+                text-transform: uppercase;
+                font-size: 30px;
+            }
+        }
+    }
+
 }
