--- a/src/sass/_small.scss
+++ b/src/sass/_small.scss
@@ -1,3 +1,46 @@
 @media (min-width: 576px) {
+
+    .main {
     
+        .rings {
+    
+            &__container {
+                position: absolute;
+                top: 540px;
+                left: 0;
+                width: 100%;
+                height: 120px;
+            }
+        
+            &__circle{
+                height: 120px;
+                width: 120px;
+            }
+    
+            &__circle-one {
+                transform: translate(90%, 0%);
+            }
+            &__circle-two {
+                transform: translate(-50%, 0%);
+            }
+            &__circle-three {
+                transform: translate(-190%, 0%);			
+            }
+        }
+
+
+        .aboutme{
+            position: relative;
+            scroll-margin-top: -45px;
+            
+            .h2-section {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, 550%);
+                text-transform: uppercase;
+            }
+        }
+    }
+
 }
