--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -6,3 +6,5 @@ $blue: #65ADF0;
 $CTA-green: #13b60b;
 $orange: #FACA8E;
 $h1-heading: #FFFFFF;
+$little-gray: #d0d0d0;
+$little-white-section: #ececec;
