--- a/src/sass/_large.scss
+++ b/src/sass/_large.scss
@@ -1,6 +1,6 @@
 @media (min-width: 992px) {
 	.nav {
-		.wrapper {
+		.wrapper-nav {
 			display: flex;
 			justify-content: space-between;
 			align-items: center;
@@ -199,17 +199,48 @@
 	}
 
     .main {
+        scroll-margin-top: -300px;
     
         .rings {
     
             &__circle-one {
-                transform: translate(190%, 0%);
+                transform: translate(140%, 0%);
             }
             &__circle-two {
                 transform: translate(-50%, 0%);
             }
             &__circle-three {
-                transform: translate(-290%, 0%);	
+                transform: translate(-240%, 0%);	
+            }
+        }
+
+        .aboutme{
+            scroll-margin-top: -135px;
+            
+            &__box1 {
+                top: 210px;
+            }
+
+            &__box-sentence {
+                position: relative;
+                width: 100%;
+                height: 800px;
+                background-image: url(../../dist/img/aboutme-bg1-big.jpg);
+                background-repeat: no-repeat;
+                background-position: 0% 120%;
+                @include flex-center;
+            }
+
+            &__box-sentence-inside {
+                position: relative;
+                left: 60px;
+                top: 70px;
+                width: 450px;
+            }
+
+            &__my-img-big {
+                right: 18%;
+                bottom: -100px;
             }
         }
     }
