--- a/src/sass/_medium.scss
+++ b/src/sass/_medium.scss
@@ -32,35 +32,55 @@
             }
         
             &__circle{
-                height: 160px;
-                width: 160px;
+                height: 200px;
+                width: 200px;
             }
     
             &__circle-one {
-                transform: translate(120%, 0%);
+                transform: translate(80%, 0%);
                 background-image: url(../../dist/img/rectangle1-big.jpg);
             }
             &__circle-two {
                 transform: translate(-50%, 0%);
                 background-image: url(../../dist/img/rectangle2-big.jpg);
+                background-position: 85% 45%;
             }
             &__circle-three {
-                transform: translate(-220%, 0%);
+                transform: translate(-180%, 0%);
                 background-image: url(../../dist/img/rectangle3-big.jpg);			
             }
         }
 
         .aboutme{
-            position: relative;
-            scroll-margin-top: -45px;
+            scroll-margin-top: -120px;
             
-            .h2-section {
+            &__box1 {
+                top: 190px;
+            }
+
+
+            &__box-sentence {
+                background-position: 0% 100%;
+            }
+        
+            
+            &__box-sentence-inside {
+                display: flex;
+                flex-direction: column;
+                width: 450px;
+            }
+    
+            &__my-img-small {
+                display: none;
+            }
+
+            &__my-img-big {
+                display: flex;
                 position: absolute;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, 600%);
-                text-transform: uppercase;
-                font-size: 30px;
+                max-width: 100%;
+                height: auto;
+                right: 10px;
+                bottom: -80px;
             }
         }
     }
