--- a/src/sass/_small.scss
+++ b/src/sass/_small.scss
@@ -35,6 +35,11 @@
 			&__box1 {
                 top: 130px;
             }
+
+            &__my-img-small {
+                right: 70px;
+                bottom: -65px;
+            }
 		}
 	}
 }
