--- a/src/sass/_medium.scss
+++ b/src/sass/_medium.scss
@@ -69,6 +69,10 @@
                 flex-direction: column;
                 width: 450px;
             }
+
+            &__text-sentence {
+                padding: 20px;
+            }
     
             &__my-img-small {
                 display: none;
@@ -81,6 +85,17 @@
                 height: auto;
                 right: 10px;
                 bottom: -80px;
+            }
+
+            &__quote-icon {
+                display: none;
+            }
+
+            &__quote-icon-big {
+                display: flex;
+                position: absolute;
+                top: -10px;
+                left: 14px;
             }
         }
     }
