--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -88,12 +88,12 @@ body {
 	}
 
 	&__logo-bg {
-	margin: 4px 4px 4px 10px;
-	width: 228px;
-	height: 62px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+		margin: 4px 4px 4px 10px;
+		width: 228px;
+		height: 62px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
 	}
 
 	&__burger-btn {
@@ -331,7 +331,6 @@ body {
 	align-items: center;
 	overflow: hidden;
 
-
 	&::before {
 		position: absolute;
 		content: '';
@@ -378,7 +377,7 @@ body {
 		color: $h1-heading;
 	}
 
-	&__button{
+	&__button {
 		margin-top: 75px;
 		width: 185px;
 		height: 44px;
@@ -411,7 +410,7 @@ body {
 		display: flex;
 		align-items: center;
 		margin-right: 15px;
-		transition: all .3s;
+		transition: all 0.3s;
 	}
 }
 
@@ -419,16 +418,15 @@ body {
 	font-size: 15px;
 
 	.rings {
-
-		&__container{
+		&__container {
 			position: absolute;
 			top: 540px;
 			left: 0;
 			width: 100%;
-			height:160px;
+			height: 160px;
 		}
-	
-		&__circle{
+
+		&__circle {
 			position: absolute;
 			height: 160px;
 			width: 160px;
@@ -449,7 +447,7 @@ body {
 			background-position: 80% 45%;
 		}
 		&__circle-three {
-			transform: translate(-170%, 0%);			
+			transform: translate(-170%, 0%);
 			background-image: url(../../dist/img/rectangle3-small.jpg);
 			background-position: 50% 50%;
 			display: none;
@@ -487,7 +485,6 @@ body {
 			margin-bottom: 50px;
 		}
 
-
 		&__box1 {
 			position: relative;
 			top: 150px;
@@ -498,7 +495,7 @@ body {
 			margin: 0 8px;
 			z-index: 1;
 		}
-		
+
 		&__box-sentence {
 			position: relative;
 			width: 100%;
@@ -509,7 +506,7 @@ body {
 			@include flex-center;
 			z-index: -1;
 		}
-		
+
 		&__text-sentence {
 			position: relative;
 			margin: 0 20px;
@@ -523,6 +520,10 @@ body {
 			letter-spacing: 1px;
 			font-size: 16px;
 			border: 1px solid $little-gray;
+		}
+
+		&__quote-icon-big {
+			display: none;
 		}
 
 		&__quote-icon {
