--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -1,6 +1,6 @@
 $bg-white: #f6f6f6;
 $black-text: #333333;
-$main-pink: #d768b2;
+$main-pink: #f254bb;
 $yellow: #FAD075;
 $blue: #65ADF0;
 $CTA-green: #13b60b;
