--- a/src/sass/_medium.scss
+++ b/src/sass/_medium.scss
@@ -34,6 +34,7 @@
             &__circle{
                 height: 200px;
                 width: 200px;
+                z-index: 1;
             }
     
             &__circle-one {
