--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -65,3 +65,25 @@
 		display: flex;
 	}
 }
+
+@keyframes showEducationList {
+	from {
+		opacity: 0;
+		height: 0px;
+	}
+	to {
+		opacity: 1;
+		height: auto;
+	}
+}
+
+@keyframes closeEducationList {
+	from {
+		opacity: 1;
+		height: auto;
+	}
+	to {
+		opacity: 0;
+		height: 0px;
+	}
+}
