--- a/src/sass/_medium.scss
+++ b/src/sass/_medium.scss
@@ -100,6 +100,22 @@
                 left: 14px;
             }
         }
+
+        .offer {
+			&__container {
+				margin: 0 14px;
+				display: flex;
+                flex-direction: row;
+			}
+            
+            &__hero-picture {
+
+                max-height: 390px;
+
+            }
+
+
+		}
     }
 
-}
+} 
