--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -28,11 +28,13 @@ body {
 }
 
 .wrapper {
+	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
 	max-width: 1360px;
 	width: 100%;
+	margin: 0 auto;
 }
 
 // NAV:
@@ -479,7 +481,7 @@ body {
 		justify-content: center;
 		align-items: center;
 		flex-direction: column;
-		// height: auto;
+		height: auto;
 
 		&__title-center {
 			display: flex;
@@ -565,13 +567,13 @@ body {
 		}
 
 		&__education-container {
+			height: auto;
 			width: 100%;
-			height: 500px;
 			background-color: $bg-white;
 			padding: 35px 15px;
 		}
 
-		/* nowe faq */
+		/* faq */
 
 		&__accordion {
 			width: 100%;
@@ -637,15 +639,11 @@ body {
 		}
 
 		.show-panel {
-			// opacity: 1;
-			// height: auto;
-			animation: showEducationList .9s ease-in forwards;
+			animation: showEducationList .3s ease-in forwards;
 		}
 
 		.hide-panel {
-			// opacity: 1;
-			// height: auto;
-			animation: closeEducationList .9s ease-in forwards;
+			animation: closeEducationList .3s ease-in forwards;
 		}
 
 		.rotate-icon-aboutme {
@@ -654,6 +652,39 @@ body {
 
 		.rotate-rev-icon-aboutme {
 			animation: arrowIconMenuOffertItemRev 1s ease forwards;
+		}
+	}
+
+	.offer {
+		scroll-margin-top: -350px;
+		background-color: $little-gray;
+
+		&__title-center {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			margin-bottom: 50px;
+		}
+
+		&__container {
+			margin: 0 14px;
+			display: flex;
+			flex-direction: column;
+		}
+
+		&__text {
+			padding-bottom: 25px;
+			line-height: 28px;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			margin-right: 15px;
+		}
+	
+		&__hero-picture {
+			max-width: 100%;
+			height: auto;
+			margin-bottom: 15px;
 		}
 	}
 }
