--- a/src/sass/_large.scss
+++ b/src/sass/_large.scss
@@ -243,6 +243,26 @@
                 bottom: -100px;
             }
         }
+
+        .offer {
+			&__container {
+				margin: 0 14px;
+				display: flex;
+                flex-direction: row;
+			}
+
+            &__hero-picture-small {
+                display: none;
+            }
+            
+            &__hero-picture {
+                display: flex;
+                max-height: 390px;
+            }
+
+
+
+		}
     }
 }
  
