--- a/src/sass/_large.scss
+++ b/src/sass/_large.scss
@@ -231,6 +231,14 @@
                 @include flex-center;
             }
 
+            &__my-img-small {
+                display: none;
+            }
+
+            &__my-img-big {
+                display: none;
+            }
+
             &__box-sentence-inside {
                 position: relative;
                 left: 60px;
@@ -239,30 +247,47 @@
             }
 
             &__my-img-big {
-                right: 18%;
+                display: flex;
+                position: absolute;
+                max-width: 100%;
+                height: auto;
+                right: 14%;
                 bottom: -100px;
             }
         }
 
-        // .offer {
-		// 	&__container {
-		// 		margin: 0 14px;
-		// 		display: flex;
-        //         flex-direction: row;
-		// 	}
+        .offer {
 
-        //     &__hero-picture-small {
-        //         display: none;
-        //     }
-            
-        //     &__hero-picture {
-        //         display: flex;
-        //         max-height: 390px;
-        //     }
+            &__acupuncture-offer-container {
+                display: flex;
+                flex-wrap: wrap;
+            }
+
+            &__acupuncture-square {
+                width: 45%;
+                padding: 12px;
+                margin: 10px;
+                border-radius: 4px;
+            }
+
+            &__acupuncture-square1 {
+                background-color: $bg-white;
+            }
+            &__acupuncture-square4 {
+                height: 400px;
+                display: flex;
+                justify-content: flex-start;
+                background-color: $bg-white;
+            }
+
+            &__acupuncture-square3 {
+                height: 400px;
+                display: flex;
+                justify-content: flex-start;
+                background-color: $bg-white;
+            }
 
 
-
-		// }
+        }
     }
 }
- 
